# AIonic

./: Cargo.toml  README.md
examples/: chat.rs  create_image.rs  edit_image.rs  embedding.rs  list_files.rs  moderation.rs  prompt.rs  prompt_state.rs  transcribe.rs  translate.rs  upload.rs
src/openai/: audio.rs  chat.rs  chat_completion.rs  embeddings.rs  files.rs  fine_tunes.rs  image.rs  misc.rs  mod.rs  moderations.rs
